fixed overflow on profile page

--- a/react-vite/src/components/ProfilePage/ProfilePage.css
+++ b/react-vite/src/components/ProfilePage/ProfilePage.css
@@ -85,6 +85,7 @@
 }
 
 .username-email-container div {
+    overflow-x: auto;
     padding: 20px;
     background-color: white;
     margin: 10px;
